<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/ChangePassword"
        android:orderInCategory="100"
        android:title="@string/menu_changePassword"
        app:showAsAction="never" />
    <item
        android:id="@+id/Share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:orderInCategory="100"
        android:title="@string/menu_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/AboutUs"
        android:orderInCategory="100"
        android:title="@string/menu_aboutUs"
        app:showAsAction="never" />
    <item
        android:id="@+id/Feedback"
        android:orderInCategory="100"
        android:title="@string/menu_feedback"
        app:showAsAction="never" />

</menu>
