<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="patient.medical.dt.mediaid.LoginActivity"
    tools:showIn="@layout/activity_login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo_patient" />

    <Button
        android:id="@+id/btnFacebook"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/list_gradfacebook"
        android:text="@string/LoginActivity_btnFacebook_text" />

    <Button
        android:id="@+id/btnGoogle"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/list_gradgooglr2"
        android:text="@string/LoginActivity_btnGoogle_text" />

    <patient.medical.dt.mediaid.views.MyTextViewBold
        android:id="@+id/txtOR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/LoginActivity_txtOr_text"
        android:textColor="@color/textColor" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <patient.medical.dt.mediaid.views.MyEditTextNormal
            android:id="@+id/etUsername"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_usernamepatient"
            android:drawablePadding="10dp"
            android:hint="@string/LoginActivity_etUserName_hint"
            android:textStyle="bold" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <patient.medical.dt.mediaid.views.MyEditTextNormal
            android:id="@+id/etPassword"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/ic_passwordpatient"
            android:drawablePadding="10dp"
            android:hint="@string/SignUpActivity_etPassword_hint"
            android:inputType="textPassword"
            android:textStyle="bold" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/list_gradbutton"
        android:text="@string/LoginActivity_btnLogin_text"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <patient.medical.dt.mediaid.views.MyTextViewBold
            android:id="@+id/txtCreateAccount"
            style="@style/TextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/LoginActivity_txtCA_text"
            android:textStyle="bold" />


        <patient.medical.dt.mediaid.views.MyTextViewBold
            android:id="@+id/txtForgotPassword"
            style="@style/TextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/LoginActivity_txtForgot_text"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnGuestUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"

        android:orientation="horizontal">

        <patient.medical.dt.mediaid.views.MyTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="Sign In with?" />

        <patient.medical.dt.mediaid.views.MyTextViewNormal

            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Guest Login"
            android:textStyle="bold" />


    </LinearLayout>
</LinearLayout>

