<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="patient.medical.dt.mediaid.SignUpActivity"
        tools:showIn="@layout/activity_main">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <patient.medical.dt.mediaid.views.MyEditTextNormal
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_name"
                android:drawablePadding="10dp"
                android:hint="@string/SignUpActivity_etName_hint"
                android:padding="15dp"
                android:textColorHint="@color/startColor"
                android:theme="@style/EditText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <patient.medical.dt.mediaid.views.MyEditTextNormal
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_usernamepatient"
                android:drawablePadding="10dp"
                android:hint="@string/SignUpActivity_etUserName_hint"
                android:padding="15dp"
                android:theme="@style/EditText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <patient.medical.dt.mediaid.views.MyEditTextNormal
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_passwordpatient"
                android:drawablePadding="10dp"
                android:hint="@string/SignUpActivity_etPassword_hint"
                android:padding="15dp"
                android:theme="@style/EditText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <patient.medical.dt.mediaid.views.MyEditTextNormal
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_passwordpatient"
                android:drawablePadding="10dp"
                android:hint="@string/SignUpActivity_etConfirmPassword_hint"
                android:padding="15dp"
                android:theme="@style/EditText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <patient.medical.dt.mediaid.views.MyEditTextNormal
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_mzil"
                android:drawablePadding="10dp"
                android:hint="@string/SignUpActivity_etEmail_hint"
                android:padding="15dp"
                android:theme="@style/EditText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <patient.medical.dt.mediaid.views.MyEditTextNormal
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="10dp"
                android:hint="@string/SignUpActivity_etPhoneNumber_hint"
                android:inputType="number"
                android:padding="15dp"
                android:theme="@style/EditText" />
        </android.support.design.widget.TextInputLayout>

        <patient.medical.dt.mediaid.views.MyTextViewNormal
            android:id="@+id/txtDob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_dob"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_dob"
            android:padding="20dp"
            android:text="@string/SignUpActivity_etDOB_hint"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <patient.medical.dt.mediaid.views.MyTextViewNormal
            android:id="@+id/txtBloodGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_blood"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_drop_down"
            android:padding="20dp"
            android:text="@string/SignUpActivity_txtBloodGroup_text"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <patient.medical.dt.mediaid.views.MyTextViewNormal
            android:id="@+id/txtGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_gender"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_drop_down"
            android:padding="20dp"
            android:text="@string/SignUpActivity_txtGender_text"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/list_gradbutton"
            android:text="@string/SignUpActivity_btnSign_text"
            android:theme="@style/Button" />
    </LinearLayout>
</ScrollView>
