<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        tools:context="patient.medical.dt.mediaid.fragment.Bmi">

        <!-- TODO: Update blank fragment layout -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <patient.medical.dt.mediaid.views.MyEditTextNormal
                android:id="@+id/etAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_age"
                android:drawablePadding="10dp"
                android:hint="@string/BMIActivity_etAge_hint"
                android:inputType="number"
                android:padding="20dp"
                android:theme="@style/EditText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <patient.medical.dt.mediaid.views.MyEditTextNormal
                android:id="@+id/etWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_weight"
                android:drawablePadding="10dp"
                android:hint="@string/BMIActivity_etWeight_hint"
                android:inputType="number"
                android:padding="20dp"
                android:theme="@style/EditText"

                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <patient.medical.dt.mediaid.views.MyEditTextNormal
                android:id="@+id/etFeet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_height"
                android:drawablePadding="10dp"
                android:hint="@string/BMIActivity_etFeet_hint"
                android:inputType="number"
                android:padding="20dp"
                android:theme="@style/EditText"

                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <patient.medical.dt.mediaid.views.MyEditTextNormal
                android:id="@+id/etInch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_height"
                android:drawablePadding="10dp"
                android:hint="@string/BMIActivity_etInch_hint"
                android:inputType="number"
                android:padding="20dp"
                android:theme="@style/EditText"

                />
        </android.support.design.widget.TextInputLayout>


        <patient.medical.dt.mediaid.views.MyTextViewNormal
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/BMIActivity_txtBMI_text"
            android:textColor="@color/startColor"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <patient.medical.dt.mediaid.views.MyEditTextNormal
                android:id="@+id/etBMI"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:singleLine="true" />

        </LinearLayout>

        <Button
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/list_gradbutton"
            android:text="@string/BMIActivity_txtBMICalculator_text"
            android:theme="@style/Button" />

    </LinearLayout>
</ScrollView>