<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="patient.medical.dt.mediaid.ForgotPassword"
    tools:showIn="@layout/activity_change_passowrd">

    <patient.medical.dt.mediaid.views.MyTextViewNormal
        android:id="@+id/txtCurPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/Change_Password_txtCurrentPassword"
        android:textSize="16dp" />

    <patient.medical.dt.mediaid.views.MyEditTextNormal
        android:id="@+id/etCurrentPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/ic_passwordpatient"
        android:drawablePadding="10dp"
        android:inputType="textPassword" />


    <patient.medical.dt.mediaid.views.MyTextViewNormal
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/Change_Password_txtNewPassword"
        android:textSize="16dp" />

    <patient.medical.dt.mediaid.views.MyEditTextNormal
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/ic_passwordpatient"
        android:drawablePadding="10dp"
        android:inputType="textPassword" />

    <patient.medical.dt.mediaid.views.MyTextViewNormal
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/Change_Password_Password_size" />

    <patient.medical.dt.mediaid.views.MyTextViewNormal
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/Change_Password_txtConfirmPassword"
        android:textSize="16dp" />

    <patient.medical.dt.mediaid.views.MyEditTextNormal
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/ic_passwordpatient"
        android:drawablePadding="10dp"
        android:inputType="textPassword" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/list_gradbutton"
            android:text="Save" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/round_buttoncancel"
            android:text="Cancel" />
    </LinearLayout>

</LinearLayout>
